# stingray-controls

./: .gitignore  README.md
src/controls_start/: CMakeLists.txt  controls.launch  controls.machine  package.xml
src/controls_start/config/: navigation.xml  odometry.xml  sensors.xml  staticTransforms.xml
src/imu/: CMakeLists.txt  package.xml
src/imu/include/imu/: position.h
src/imu/launch/: imu.launch
src/imu/src/: imu_subscriber.cpp
src/nav/: CMakeLists.txt  package.xml
src/nav/cfg/: navParams.cfg
src/nav/include/: nav.h
src/nav/src/: nav.cpp
src/os5000/: CMakeLists.txt  package.xml
src/os5000/cfg/: os5000.cfg
src/os5000/cfg/cpp/os5000/: os5000Config.h
src/os5000/include/: os5000_core.h  os5000_ros.h
src/os5000/src/: os5000_core.cpp  os5000_listener.cpp  os5000_ros.cpp
src/os5000/src/os5000/cfg/: os5000Config.py
src/pid/: CMakeLists.txt  package.xml
src/pid/src/: pid.cpp
src/planner/: CMakeLists.txt  controlAnalysis.launch  package.xml
src/planner/cfg/: plannerParams.cfg
src/planner/include/: planner.h
src/planner/src/: planner.cpp
src/quat_to_euler/: CMakeLists.txt  package.xml  quat_to_euler.py
src/sbbta252/: CMakeLists.txt  package.xml
src/sbbta252/cfg/: sbbta252Params.cfg
src/sbbta252/include/: sbbta252.h
src/sbbta252/src/: sbbta252.cpp
